--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="intro">
             <div id="intro-content">
                 <h1 data-aos="zoom-in">
-                    Liceul Teoretic <br /> "Ștefan cel Mare
+                    Gimnaziul <br /> "Viorel Cantemir"
                 </h1>
                 <a data-aos="zoom-in" data-aos-delay="500" href="#despre">Află mai mult</a>
             </div>
