--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Școala mea</title>
+    <title>Gimnaziul "Viorel Cantemir"</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/icon.png" />
@@ -40,7 +40,7 @@
         <section id="intro">
             <div id="intro-content">
                 <h1 data-aos="zoom-in">
-                    Gimnaziul <br /> "Viorel Cantemir"
+                    Instituția Publică <br /> Gimnaziul "Viorel Cantemir"
                 </h1>
                 <a data-aos="zoom-in" data-aos-delay="500" href="#despre">Află mai mult</a>
             </div>
@@ -50,12 +50,24 @@
             <div class="centered" data-aos="fade-up">
                 <h1>Despre noi</h1>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt inventore saepe sequi exercitationem
-                    excepturi libero consectetur rerum animi error amet sint, minima, fugiat aspernatur doloremque
-                    consequatur nostrum eos veritatis illo.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, omnis doloremque distinctio possimus,
-                    eum deleniti, quasi animi nostrum molestias vitae facere quae a eius doloribus. Iure culpa illum
-                    veniam incidunt!
+                    Gimnaziul din satul Sofia, raionul Drochia poartă numele în cinstea eroului, sergentului de poliție
+            Viorel Cantemir,care ar fi împlinit frumoasa vârstă de 40 de primăveri…
+            Erou este acela care și-a dăruit viața unui lucru mai important ca el însuși.
+            Sofia un sat pitoresc, cu oameni harnici, mărinimoși, adevărați patrioți ai neamului.
+            Frumos e satul, frumoși sunt oamenii din sat, dar mai frumoși sunt oamenii ce-au dăruit țării adevărați
+            feciori ai neamului.
+            Unul dintre acești bravi feciori este Viorel Cantemir, născut la 1 aprilie 1980 în familia lui Ion și
+            Ecaterina Cantemir. A fost un băiat frumos la chip și suflet: cuminte, ascultător, activ, prietenos și
+            stăduitor. După absolvirea școlii medii în 1997, el a fost Înrolat în rândurile armatei naționale. După
+            întoarcere este angajat la serviciul Pază de Stat a Republicii Moldova în orașul Bălți.
+            Dar în noaptea de 25 noiembrie 2001, un glonte a unui grup de tâlhari i-au luat viața sergentului de
+            poliție Viorel Cantemir, înrolat recent în cadrul Ministerului Afacerilor Interne. Tânărul se afla în
+            acel moment în exercitare de serviciu, parvenit la o declanșare de alarmă la un obiect păzit.
+            Sergentul de poliție Cantemir Viorel, căzut la datorie în timpul îndeplinirii serviciului la 25.11.2001
+            a fost decorat cu Ordinul „Ștefan cel Mare” post-mortem prin Decretul Președintelui Republicii Moldova
+            din 14.12.2001. În semn de recunoștință pentru serviciul în cadrul Ministerului Afacerilor Interne, a
+            fost menționat post-mortem cu Distincția Ministerului Afacerilor Interne Crucea „Pentru Merit” la
+            16.05.2019.
                 </p>
                 <q>Veni vidi vici</q>
 
@@ -89,12 +101,9 @@
             <div class="centered" data-aos="fade-up">
                 <h1>Merite</h1>
                 <i id="trofeu" class="fas fa-trophy" data-aos="flip-left" data-aos-delay="500"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur hic illo voluptatibus beatae,
-                    maiores eos commodi dolore quibusdam recusandae soluta rem quaerat. Labore ipsa placeat nostrum nemo
-                    voluptatum accusamus molestiae.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptatum aliquid possimus
-                    perferendis tempora assumenda excepturi minus autem facere rem dolor iusto doloribus earum dolorum,
-                    et consectetur suscipit voluptatem laudantium.
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias aut expedita eveniet consequatur
+                    maiores rem sed inventore numquam vero accusamus non, iure aliquam cumque repellat eum error ipsa
+                    fugiat enim?
                 </p>
 
                 <div class="merit">
@@ -120,15 +129,15 @@
                 <div class="slideshow">
                     <div class="slide">
                         <div class="nr-slide">1/3</div>
-                        <img src="images/scoala2.jpg" />
+                        <img src="images/gimnaziu2.jpg" />
                     </div>
                     <div class="slide">
                         <div class="nr-slide">2/3</div>
-                        <img src="images/scoala3.jpg" />
+                        <img src="images/gimnaziu3.jpg" />
                     </div>
                     <div class="slide">
                         <div class="nr-slide">3/3</div>
-                        <img src="images/scoala3.jpg" />
+                        <img src="images/gimnaziu4.jpg" />
                     </div>
                 </div>
             </div>
@@ -137,35 +146,35 @@
         <section id="galerie">
             <h1 class="centered">Galerie</h1>
             <div class="container-galerie">
-                <a href="images/scoala1.jpg" target="_blank">
-                    <img src="images/scoala1.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu1.jpg" target="_blank">
+                    <img src="images/gimnaziu1.jpg" data-aos="flip-up">
                 </a>
-                <a href="images/scoala2.jpg" target="_blank">
-                    <img src="images/scoala2.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu2.jpg" target="_blank">
+                    <img src="images/gimnaziu2.jpg" data-aos="flip-up">
                 </a>
-                <a href="images/scoala3.jpg" target="_blank">
-                    <img src="images/scoala3.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu3.jpg" target="_blank">
+                    <img src="images/gimnaziu3.jpg" data-aos="flip-up">
                 </a>
-                <a href="images/scoala1.jpg" target="_blank">
-                    <img src="images/scoala1.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu4.jpg" target="_blank">
+                    <img src="images/gimnaziu4.jpg" data-aos="flip-up">
                 </a>
-                <a href="images/scoala2.jpg" target="_blank">
-                    <img src="images/scoala2.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu5.jpg" target="_blank">
+                    <img src="images/gimnaziu5.jpg" data-aos="flip-up">
                 </a>
-                <a href="images/scoala3.jpg" target="_blank">
-                    <img src="images/scoala3.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu6.jpg" target="_blank">
+                    <img src="images/gimnaziu6.jpg" data-aos="flip-up">
                 </a>
-                <a href="images/scoala1.jpg" target="_blank">
-                    <img src="images/scoala1.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu7.jpg" target="_blank">
+                    <img src="images/gimnaziu7.jpg" data-aos="flip-up">
                 </a>
-                <a href="images/scoala2.jpg" target="_blank">
-                    <img src="images/scoala2.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu8.jpg" target="_blank">
+                    <img src="images/gimnaziu8.jpg" data-aos="flip-up">
                 </a>
-                <a href="images/scoala3.jpg" target="_blank">
-                    <img src="images/scoala3.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu9.jpg" target="_blank">
+                    <img src="images/gimnaziu9.jpg" data-aos="flip-up">
                 </a>
-                <a href="images/scoala1.jpg" target="_blank">
-                    <img src="images/scoala1.jpg" data-aos="flip-up">
+                <a href="images/gimnaziu10.jpg" target="_blank">
+                    <img src="images/gimnaziu10.jpg" data-aos="flip-up">
                 </a>
                 <a href="images/scoala2.jpg" target="_blank">
                     <img src="images/scoala2.jpg" data-aos="flip-up">
@@ -196,6 +205,70 @@
         <section id="orar">
             <h1 class="centered">Orar</h1>
             <div class="acordeon">
+                <input type="checkbox" id="clasa-1">
+                <label for="clasa-1"><i class="fas fa-caret-down"></i> Clasa I</label>
+
+                <div class="content">
+                    <a href="images/scoala1.jpg">
+                        <div class="clasa">I A</div>
+                        <img src="images/scoala1.jpg" />
+                    </a>
+                    <a href="images/scoala1.jpg">
+                        <div class="clasa">I B</div>
+                        <img src="images/scoala1.jpg" />
+                    </a>
+                </div>
+            </div>
+
+            <div class="acordeon">
+                <input type="checkbox" id="clasa-2">
+                <label for="clasa-2"><i class="fas fa-caret-down"></i> Clasa II</label>
+
+                <div class="content">
+                    <a href="images/scoala1.jpg">
+                        <div class="clasa">II A</div>
+                        <img src="images/scoala1.jpg" />
+                    </a>
+                    <a href="images/scoala1.jpg">
+                        <div class="clasa">II B</div>
+                        <img src="images/scoala1.jpg" />
+                    </a>
+                </div>
+            </div>
+
+            <div class="acordeon">
+                <input type="checkbox" id="clasa-3">
+                <label for="clasa-3"><i class="fas fa-caret-down"></i> Clasa III</label>
+
+                <div class="content">
+                    <a href="images/scoala1.jpg">
+                        <div class="clasa">III A</div>
+                        <img src="images/scoala1.jpg" />
+                    </a>
+                    <a href="images/scoala1.jpg">
+                        <div class="clasa">III B</div>
+                        <img src="images/scoala1.jpg" />
+                    </a>
+                </div>
+            </div>
+
+            <div class="acordeon">
+                <input type="checkbox" id="clasa-4">
+                <label for="clasa-4"><i class="fas fa-caret-down"></i> Clasa IV</label>
+
+                <div class="content">
+                    <a href="images/scoala1.jpg">
+                        <div class="clasa">IV A</div>
+                        <img src="images/scoala1.jpg" />
+                    </a>
+                    <a href="images/scoala1.jpg">
+                        <div class="clasa">IV B</div>
+                        <img src="images/scoala1.jpg" />
+                    </a>
+                </div>
+            </div>
+
+            <div class="acordeon">
                 <input type="checkbox" id="clasa-5">
                 <label for="clasa-5"><i class="fas fa-caret-down"></i> Clasa V</label>
 
@@ -206,10 +279,6 @@
                     </a>
                     <a href="images/scoala1.jpg">
                         <div class="clasa">5 B</div>
-                        <img src="images/scoala1.jpg" />
-                    </a>
-                    <a href="images/scoala1.jpg">
-                        <div class="clasa">5 C</div>
                         <img src="images/scoala1.jpg" />
                     </a>
                 </div>
@@ -228,8 +297,52 @@
                         <div class="clasa">6 B</div>
                         <img src="images/scoala2.jpg" />
                     </a>
+                </div>
+            </div>
+
+            <div class="acordeon">
+                <input type="checkbox" id="clasa-7">
+                <label for="clasa-7"><i class="fas fa-caret-down"></i> Clasa VII</label>
+
+                <div class="content">
                     <a href="images/scoala2.jpg">
-                        <div class="clasa">6 C</div>
+                        <div class="clasa">7 A</div>
+                        <img src="images/scoala2.jpg" />
+                    </a>
+                    <a href="images/scoala2.jpg">
+                        <div class="clasa">7 B</div>
+                        <img src="images/scoala2.jpg" />
+                    </a>
+                </div>
+            </div>
+
+            <div class="acordeon">
+                <input type="checkbox" id="clasa-8">
+                <label for="clasa-8"><i class="fas fa-caret-down"></i> Clasa VIII</label>
+
+                <div class="content">
+                    <a href="images/scoala2.jpg">
+                        <div class="clasa">8 A</div>
+                        <img src="images/scoala2.jpg" />
+                    </a>
+                    <a href="images/scoala2.jpg">
+                        <div class="clasa">8 B</div>
+                        <img src="images/scoala2.jpg" />
+                    </a>
+                </div>
+            </div>
+
+            <div class="acordeon">
+                <input type="checkbox" id="clasa-9">
+                <label for="clasa-9"><i class="fas fa-caret-down"></i> Clasa IX</label>
+
+                <div class="content">
+                    <a href="images/scoala2.jpg">
+                        <div class="clasa">9 A</div>
+                        <img src="images/scoala2.jpg" />
+                    </a>
+                    <a href="images/scoala2.jpg">
+                        <div class="clasa">9 B</div>
                         <img src="images/scoala2.jpg" />
                     </a>
                 </div>
@@ -260,12 +373,12 @@
                         <form id="formular">
                             <h3>Lasă un mesaj</h3>
                             <input type="text" id="nume" placeholder="Nume" required>
-                            <br/>
+                            <br />
                             <input type="text" id="email" placeholder="Email" required>
-                            <br/>
+                            <br />
                             <textarea id="mesaj" rows="4" placeholder="Mesaj" required></textarea>
-                            <br/>
-                            <input  onclick="send()" type="buton" id='transmite' value="Transmite">
+                            <br />
+                            <input onclick="send()" type="buton" id='transmite' value="Transmite">
                         </form>
                     </div>
                 </div>
@@ -273,9 +386,8 @@
                 <div class="col-50">
                     <h1 class="centered">Ne aflăm aici</h1>
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d42766.74430514472!2d27.831715909010494!3d47.9379017745108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40cca06e84037911%3A0x9380f8f73a7ab893!2sSofia%2C%20Moldova!5e0!3m2!1sro!2s!4v1620835812007!5m2!1sro!2s"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2672.558853059963!2d27.85561971552066!3d47.9449163792086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40cca7afa74a4021%3A0x75c161250161cc4!2sGimnaziul%20%22Viorel%20Cantemir%22!5e0!3m2!1sro!2s!4v1622056262211!5m2!1sro!2s"
                         width="100%" height="504" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
                 </div>
             </div>
         </section>
